--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -71,18 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../_publications/2021-09-01-Distinct-gene-expression-dynamics-in-germ-line-and-somatic-tissue-during-ovariole-morphogenesis-in-Drosophila-melanogaster.md'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_24181/1056802331.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     96\u001b[0m             \u001b[0mmd_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmd_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m             \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../_publications/\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmd_filename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'SUCESSFULLY PARSED {bib_id}: \\\"'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"title\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"...\"\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\\\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../_publications/2021-09-01-Distinct-gene-expression-dynamics-in-germ-line-and-somatic-tissue-during-ovariole-morphogenesis-in-Drosophila-melanogaster.md'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCESSFULLY PARSED Tarikere2021: \" {Distinct gene expression dynamics in germ line and somatic  ... \"\n",
+      "SUCESSFULLY PARSED Blondel2021: \" {Evolution of a cytoplasmic determinant: evidence for the bi ... \"\n",
+      "SUCESSFULLY PARSED Herrera2021: \" {Molecular characterization of genetic diversity in apricot  ... \"\n",
+      "SUCESSFULLY PARSED Ylla2020: \" {MirCure: a tool for quality control, filter and curation of ... \"\n",
+      "SUCESSFULLY PARSED Ventos-Alfonso2020a: \" {DNMT1 Promotes Genome Methylation and Early Embryo Developm ... \"\n",
+      "SUCESSFULLY PARSED Ylla2017: \" {Comparative analysis of miRNA expression during the develop ... \"\n",
+      "SUCESSFULLY PARSED Ylla2018: \" {Comparative transcriptomics in two extreme neopterans revea ... \"\n",
+      "SUCESSFULLY PARSED VentosAlfonso2019a: \" {Zelda and the maternal-to-zygotic transition in cockroaches ... \"\n",
+      "SUCESSFULLY PARSED Harrison2018c: \" {Expansions of key protein families in the German cockroach  ... \"\n",
+      "SUCESSFULLY PARSED Llonga2018: \" {Diversity of piRNA expression patterns during the ontogeny  ... \"\n",
+      "SUCESSFULLY PARSED Ylla2016: \" {The microRNA toolkit of insects}  \"\n",
+      "SUCESSFULLY PARSED Ylla2015A: \" {Towards understanding the molecular basis of cockroach terg ... \"\n",
+      "SUCESSFULLY PARSED Ylla2021: \" {Insights into the genomic evolution of insects from cricket ... \"\n",
+      "SUCESSFULLY PARSED Montanes2021: \" {siRNA enrichment in Argonaute 2-depleted Blattella germanic ... \"\n",
+      "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n"
      ]
     }
    ],
