--- a/markdown_generator/YllaPublications.bib
+++ b/markdown_generator/YllaPublications.bib
@@ -58,9 +58,9 @@ year = {2020}
 }
 @article{Ventos-Alfonso2020a,
 abstract = {The COVID-19 outbreak spread in China and is a threat to the world. The aims of this study to help health workers better understand the epidemic of the COVID-19 and provide different control strategies toward Hubei Province and other regions in China. A comprehensive search of the Chinese Center for Disease Control and Prevention official websites and announcements was performed between 20 Jan 2019 and 29 Feb 2020. The relevant data of the distribution of the infection on each reported day were obtained.Up to 29 Feb 2020, 79,824 confirmed cases with the COVID-19 including 66,907 in Hubei Province and 12,377 in other administrative regions were reported.The SARS-COV-2 showed faster epidemic trends compared with the 2003-SARS-CoV. A total of 2,870 deaths have been reported with a mortality of 3.6%. The mortality of the COVID-19 was nationwide among 79,824 confirmed cases, significantly higher in Hubei Province than that in other regions(4.1% versus 0.84%). Since 1 Feb 2020 the number of discharged cases exceeded the number of the dead. By 29 Feb 2020, the number of discharged patients was 41,625, which exceeded the number of hospitalized patients, and the trend has further increased. The infection of the SARS-COV-2 is spreading and increasing nationwide, and Hubei Province is the main epidemic area, with higher mortality. The outbreak is now under initial control especially in other regions outside of Hubei Province. Due to the different epidemic characteristics between Hubei Province and other regions, we should focus on different prevention and control strategies.},
-author = {Vent{\'{o}}s-Alfonso, Alba and Ylla, Guillem and Monta{\~{n}}es, Jose-Carlos and Belles, Xavier},
+author = {Ventos-Alfonso, Alba and Ylla, Guillem and Montanes, Jose-Carlos and Belles, Xavier},
 doi = {10.1016/j.isci.2020.101778},
-file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Vent{\'{o}}s-Alfonso et al. - 2020 - DNMT1 promotes genome methylation and early embryo development in cockroaches.pdf:pdf},
+file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ventos-Alfonso et al. - 2020 - DNMT1 promotes genome methylation and early embryo development in cockroaches.pdf:pdf},
 issn = {25890042},
 journal = {iScience},
 month = {nov},
@@ -206,9 +206,9 @@ year = {2021}
 }
 @article{Montanes2021,
 abstract = {Background: RNA interference (RNAi) is a cellular mechanism used to fight various threats, including transposons, aberrant RNAs, and some types of viruses. This mechanism relies on the detection of dsRNA molecules, which through a pathway involving Dicer-2 (Dcr-2) and Argonaute 2 (AGO2), produces small interfering RNAs (siRNAs) that bind to the complementary RNAs triggering their degradation. Methods: Using the cockroach Blattella germanica as a model, we examined AGO2 activity by depleting its mRNA using RNAi and analyzing the phenotypes produced. Results: Depleting AGO2 expression had no remarkable effect on nymphal development or reproduction. dsRNA treatment triggered an immediate and transitory increase in AGO2 expression, independently of Dcr-2 action. In addition, we analyzed the siRNAs generated after injecting a heterologous dsRNA in control and AGO2-depleted animals. The results revealed that obtained siRNAs mapped non-uniformly along the dsRNA sequence. In AGO2-depleted animals, the proportion of 22 nucleotide reads was higher and accumulations of reads appeared in areas less well-represented in the controls. We also detected a preference for cytosine as the first nucleotide in controls that was significantly attenuated in AGO2-depleted individuals. Conclusions/general significance: The siRNAs produced from a dsRNA mapped heterogeneously along the length of the dsRNA and this arrangement depends on the dsRNA sequence. AGO2 exerts its role as nuclease on the siRNA duplexes independently of its action on the corresponding mRNA. This study sheds light on an extremely useful process for reverse genetics in laboratories, in addition to the design of more effective, specific, and eco-friendly pest-control strategies.},
-author = {Monta{\~{n}}{\'{e}}s, Jos{\'{e}} Carlos and Rojano, Carlos and Ylla, Guillem and Piulachs, Maria Dolors and Maestro, Jos{\'{e}} Luis},
+author = {Montan{\'{e}}s, Jos{\'{e}} Carlos and Rojano, Carlos and Ylla, Guillem and Piulachs, Maria Dolors and Maestro, Jos{\'{e}} Luis},
 doi = {10.1016/j.bbagrm.2021.194704},
-file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Monta{\~{n}}{\'{e}}s et al. - 2021 - siRNA enrichment in Argonaute 2-depleted Blattella germanica.pdf:pdf},
+file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Montan{\'{e}}s et al. - 2021 - siRNA enrichment in Argonaute 2-depleted Blattella germanica.pdf:pdf},
 issn = {18764320},
 journal = {Biochimica et Biophysica Acta - Gene Regulatory Mechanisms},
 keywords = {Argonaute,Blattella germanica,Insect,RNAi,dsRNA},
