--- a/markdown_generator/YllaPublications.bib
+++ b/markdown_generator/YllaPublications.bib
@@ -25,7 +25,7 @@ year = {2021}
 }
 @article{Herrera2021,
 abstract = {In the recent years, an important renewal of apricot cultivars is taking place worldwide with the introduction of a large number of new releases, which are replacing traditional and local cultivars in many situations. To study the current genetic diversity, a group of 202 apricot accessions, including landraces and releases from breeding programs in several countries, has been characterized using 13 microsatellite markers. The diversity parameters showed higher diversity in modern releases than in landraces, but also suggested a loss of diversity associated with recent breeding. Two main clusters according to the pedigree origin of the accessions were clearly differentiated in the phylogenetic analysis based on Nei's genetic distance. The first group comprised mostly European and North American traditional cultivars, and the second group included the majority of recent and commercial releases from breeding programs. Further population analyses showed the same clustering trend on the distribution of individuals and clusters, confirming the results obtained in the molecular phylogenetic analysis. These results provide a sight of the erosion and the decrease of the genetic diversity in the currently grown apricot and highlight the importance of preserve traditional cultivars and local germplasm to assure genetic resources for further breeding.},
-author = {Herrera, Sara and Hormaza, Jos{\'{e}} I. and Lora, Jorge and Ylla, Guillem and Rodrigo, Javier},
+author = {Herrera, Sara and Hormaza, Jose I. and Lora, Jorge and Ylla, Guillem and Rodrigo, Javier},
 doi = {10.3390/agronomy11091714},
 file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Herrera et al. - 2021 - Molecular Characterization of Genetic Diversity in Apricot Cultivars Current Situation and Future Perspectives.pdf:pdf},
 issn = {20734395},
@@ -206,9 +206,9 @@ year = {2021}
 }
 @article{Montanes2021,
 abstract = {Background: RNA interference (RNAi) is a cellular mechanism used to fight various threats, including transposons, aberrant RNAs, and some types of viruses. This mechanism relies on the detection of dsRNA molecules, which through a pathway involving Dicer-2 (Dcr-2) and Argonaute 2 (AGO2), produces small interfering RNAs (siRNAs) that bind to the complementary RNAs triggering their degradation. Methods: Using the cockroach Blattella germanica as a model, we examined AGO2 activity by depleting its mRNA using RNAi and analyzing the phenotypes produced. Results: Depleting AGO2 expression had no remarkable effect on nymphal development or reproduction. dsRNA treatment triggered an immediate and transitory increase in AGO2 expression, independently of Dcr-2 action. In addition, we analyzed the siRNAs generated after injecting a heterologous dsRNA in control and AGO2-depleted animals. The results revealed that obtained siRNAs mapped non-uniformly along the dsRNA sequence. In AGO2-depleted animals, the proportion of 22 nucleotide reads was higher and accumulations of reads appeared in areas less well-represented in the controls. We also detected a preference for cytosine as the first nucleotide in controls that was significantly attenuated in AGO2-depleted individuals. Conclusions/general significance: The siRNAs produced from a dsRNA mapped heterogeneously along the length of the dsRNA and this arrangement depends on the dsRNA sequence. AGO2 exerts its role as nuclease on the siRNA duplexes independently of its action on the corresponding mRNA. This study sheds light on an extremely useful process for reverse genetics in laboratories, in addition to the design of more effective, specific, and eco-friendly pest-control strategies.},
-author = {Montan{\'{e}}s, Jos{\'{e}} Carlos and Rojano, Carlos and Ylla, Guillem and Piulachs, Maria Dolors and Maestro, Jos{\'{e}} Luis},
+author = {Montanes, Jose Carlos and Rojano, Carlos and Ylla, Guillem and Piulachs, Maria Dolors and Maestro, Jose Luis},
 doi = {10.1016/j.bbagrm.2021.194704},
-file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Montan{\'{e}}s et al. - 2021 - siRNA enrichment in Argonaute 2-depleted Blattella germanica.pdf:pdf},
+file = {:home/ysland/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Montanes et al. - 2021 - siRNA enrichment in Argonaute 2-depleted Blattella germanica.pdf:pdf},
 issn = {18764320},
 journal = {Biochimica et Biophysica Acta - Gene Regulatory Mechanisms},
 keywords = {Argonaute,Blattella germanica,Insect,RNAi,dsRNA},
