--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -71,27 +71,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " Shreeharsha Tarikere,  <b>Guillem Ylla</b>,  Cassandra Extavour, \n",
       "SUCESSFULLY PARSED Tarikere2021: \" {Distinct gene expression dynamics in germ line and somatic  ... \"\n",
+      " Leo Blondel,  Savandara Besse,  Emily Rivard,  <b>Guillem Ylla</b>,  Cassandra Extavour, \n",
       "SUCESSFULLY PARSED Blondel2021: \" {Evolution of a cytoplasmic determinant: evidence for the bi ... \"\n",
+      " Sara Herrera,  Jos{\\'{e}} Hormaza,  Jorge Lora,  <b>Guillem Ylla</b>,  Javier Rodrigo, \n",
       "SUCESSFULLY PARSED Herrera2021: \" {Molecular characterization of genetic diversity in apricot  ... \"\n",
+      " <b>Guillem Ylla</b>,  Tianyuan Liu,  Ana Conesa, \n",
       "SUCESSFULLY PARSED Ylla2020: \" {MirCure: a tool for quality control, filter and curation of ... \"\n",
+      " Alba Vent{\\'{o}}s-Alfonso,  <b>Guillem Ylla</b>,  Jose-Carlos Montanes,  Xavier Belles, \n",
       "SUCESSFULLY PARSED Ventos-Alfonso2020a: \" {DNMT1 Promotes Genome Methylation and Early Embryo Developm ... \"\n",
+      " <b>Guillem Ylla</b>,  Maria Piulachs,  Xavier Belles, \n",
       "SUCESSFULLY PARSED Ylla2017: \" {Comparative analysis of miRNA expression during the develop ... \"\n",
+      " <b>Guillem Ylla</b>,  Maria-Dolors Piulachs,  Xavier Belles, \n",
       "SUCESSFULLY PARSED Ylla2018: \" {Comparative transcriptomics in two extreme neopterans revea ... \"\n",
+      " Alba Ventos-Alfonso,  <b>Guillem Ylla</b>,  Xavier Belles, \n",
       "SUCESSFULLY PARSED VentosAlfonso2019a: \" {Zelda and the maternal-to-zygotic transition in cockroaches ... \"\n",
+      " Mark Harrison,  Nicolas Arning,  Lukas Kremer,  <b>Guillem Ylla</b>,  Xavier Belles,  Erich Bornberg-Bauer,  Ann Huylmans,  Evelien Jongepier,  Maria Piulachs,  Stephen Richards,  Coby Schal, \n",
       "SUCESSFULLY PARSED Harrison2018c: \" {Expansions of key protein families in the German cockroach  ... \"\n",
+      " Natalia Llonga,  <b>Guillem Ylla</b>,  Josep Bau,  Xavier Belles,  Maria Piulachs, \n",
       "SUCESSFULLY PARSED Llonga2018: \" {Diversity of piRNA expression patterns during the ontogeny  ... \"\n",
+      " <b>Guillem Ylla</b>,  Bastian Fromm,  Maria Piulachs,  Xavier Belles, \n",
       "SUCESSFULLY PARSED Ylla2016: \" {The microRNA toolkit of insects}  \"\n",
+      " Xavier Belles,  <b>Guillem Ylla</b>, \n",
       "SUCESSFULLY PARSED Ylla2015A: \" {Towards understanding the molecular basis of cockroach terg ... \"\n",
+      " <b>Guillem Ylla</b>,  Taro Nakamura,  Takehiko Itoh,  Rei Kajitani,  Atsushi Toyoda,  Sayuri Tomonari,  Tetsuya Bando,  Yoshiyasu Ishimaru,  Takahito Watanabe,  Masao Fuketa,  Yuji Matsuoka,  Austen Barnett,  Sumihare Noji,  Taro Mito,  Cassandra Extavour, \n",
       "SUCESSFULLY PARSED Ylla2021: \" {Insights into the genomic evolution of insects from cricket ... \"\n",
+      " Jos{\\'{e}} Montan{\\'{e}}s,  Carlos Rojano,  <b>Guillem Ylla</b>,  Maria Piulachs,  Jos{\\'{e}} Maestro, \n",
       "SUCESSFULLY PARSED Montanes2021: \" {siRNA enrichment in Argonaute 2-depleted Blattella germanic ... \"\n",
+      " Mark Harrison,  Evelien Jongepier,  Hugh Robertson,  Nicolas Arning,  Tristan Bitard-Feildel,  Hsu Chao,  Christopher Childers,  Huyen Dinh,  Harshavardhan Doddapaneni,  Shannon Dugan,  Johannes Gowin,  Carolin Greiner,  Yi Han,  Haofu Hu,  Daniel Hughes,  Ann Huylmans,  Carsten Kemena,  Lukas Kremer,  Sandra Lee,  Alberto Lopez-Ezquerra,  Ludovic Mallet,  Jose Monroy-Kuhn,  Annabell Moser,  Shwetha Murali,  Donna Muzny,  Saria Otani,  Maria Piulachs,  Monica Poelchau,  Jiaxin Qu,  Florentine Schaub,  Ayako Wada-Katsumata,  Kim Worley,  Qiaolin Xie,  <b>Guillem Ylla</b>,  Michael Poulsen,  Richard Gibbs,  Coby Schal,  Stephen Richards,  Xavier Belles,  Judith Korb,  Erich Bornberg-Bauer, \n",
       "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n"
      ]
     }
@@ -144,6 +159,15 @@
     "            #citation authors - todo - add highlighting for primary author?\n",
     "            for author in bibdata.entries[bib_id].persons[\"author\"]:\n",
     "                citation = citation+\" \"+author.first_names[0]+\" \"+author.last_names[0]+\", \"\n",
+    "            \n",
+    "            ################\n",
+    "            ## Make Ylla lab people bold and replace bad characters\n",
+    "            citation=citation.replace(\"Guillem Ylla\", \"<b>Guillem Ylla</b>\")\n",
+    "            ## fix accents\n",
+    "            citation=citation.replace('{\\'{e}}', \"e\")\n",
+    "            citation=citation.replace('{\\~{n}}', \"n\")\n",
+    "            citation=citation.replace('{\\'{o}}', \"o\")         \n",
+    "            print(citation)\n",
     "\n",
     "            #citation title\n",
     "            citation = citation + \"\\\"\" + html_escape(b[\"title\"].replace(\"{\", \"\").replace(\"}\",\"\").replace(\"\\\\\",\"\")) + \".\\\"\"\n",
@@ -208,7 +232,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
