--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,42 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G3 Genes|Genomes|Genetics\n",
+      "WARNING Missing Expected Field 'journal' from entry Mito2022: \" {Cricket: The third domesticat ... \"\n",
+      "SUCESSFULLY PARSED Nakamura2022: \" {Genomics and genome editing techniques of crickets, an emer ... \"\n",
       "SUCESSFULLY PARSED Tarikere2021: \" {Distinct gene expression dynamics in germ line and somatic  ... \"\n",
-      "Molecular Biology and Evolution\n",
       "SUCESSFULLY PARSED Blondel2021: \" {Evolution of a cytoplasmic determinant: evidence for the bi ... \"\n",
-      "Agronomy\n",
       "SUCESSFULLY PARSED Herrera2021: \" {Molecular characterization of genetic diversity in apricot  ... \"\n",
-      "Bioinformatics\n",
       "SUCESSFULLY PARSED Ylla2020: \" {MirCure: a tool for quality control, filter and curation of ... \"\n",
-      "iScience\n",
       "SUCESSFULLY PARSED Ventos-Alfonso2020a: \" {DNMT1 Promotes Genome Methylation and Early Embryo Developm ... \"\n",
-      "BMC Genomics\n",
       "SUCESSFULLY PARSED Ylla2017: \" {Comparative analysis of miRNA expression during the develop ... \"\n",
-      "iScience\n",
       "SUCESSFULLY PARSED Ylla2018: \" {Comparative transcriptomics in two extreme neopterans revea ... \"\n",
-      "FEBS Journal\n",
       "SUCESSFULLY PARSED VentosAlfonso2019a: \" {Zelda and the maternal-to-zygotic transition in cockroaches ... \"\n",
-      "Journal of Experimental Zoology Part B: Molecular and Developmental Evolution\n",
       "SUCESSFULLY PARSED Harrison2018c: \" {Expansions of key protein families in the German cockroach  ... \"\n",
-      "Journal of Experimental Zoology Part B: Molecular and Developmental Evolution\n",
       "SUCESSFULLY PARSED Llonga2018: \" {Diversity of piRNA expression patterns during the ontogeny  ... \"\n",
-      "Scientific Reports\n",
       "SUCESSFULLY PARSED Ylla2016: \" {The microRNA toolkit of insects}  \"\n",
-      "Insect Biochemistry and Molecular Biology\n",
       "SUCESSFULLY PARSED Ylla2015A: \" {Towards understanding the molecular basis of cockroach terg ... \"\n",
-      "Communications Biology\n",
       "SUCESSFULLY PARSED Ylla2021: \" {Insights into the genomic evolution of insects from cricket ... \"\n",
-      "Biochimica et Biophysica Acta - Gene Regulatory Mechanisms\n",
       "SUCESSFULLY PARSED Montanes2021: \" {siRNA enrichment in Argonaute 2-depleted Blattella germanic ... \"\n",
-      "Nature Ecology and Evolution\n",
       "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n"
      ]
     }
