--- a/markdown_generator/YllaPublications.bib
+++ b/markdown_generator/YllaPublications.bib
@@ -1,3 +1,28 @@
+@incollection{Mito2022,
+author = {Mito, Taro and Ishimaru, Yoshiyasu and Watanabe, Takahito and Nakamura, Taro and Ylla, Guillem and Noji, Sumihare and Extavour, Cassandra G.},
+doi = {10.1016/bs.ctdb.2022.02.003},
+issn = {0070-2153},
+month = {mar},
+journal = {Current Topics in Developmental Biology},
+publisher = {Academic Press},
+title = {{Cricket: The third domesticated insect}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S0070215322000096},
+year = {2022}
+}
+@article{Nakamura2022,
+abstract = {Most tools available for manipulating gene function in insects have been developed for holometabolous species. In contrast, functional genetics tools for the Hemimetabola are highly underdeveloped. This is a barrier both to understanding ancestral insect biology, and to optimizing contemporary study and manipulation of particular large hemimetabolous orders of crucial economic and agricultural importance like the Orthoptera. For orthopteran insects, including crickets, the rapid spread of next-generation sequencing technology has made transcriptome data available for a wide variety of species over the past decade. Furthermore, whole genome sequences of orthopteran insects with relatively large genome sizes are now available. With these new genome assemblies and the development of genome editing technologies such as the CRISPR-Cas9 system, it has become possible to create gene knock-out and knock-in strains in orthopteran insects. As a result, orthopteran insects should become increasingly feasible for laboratory study not only in research fields that have traditionally used insects, but also in agricultural fields that use them as food and feed. In this review, we summarize these recent advances and their relevance to such applications.},
+author = {Nakamura, Taro and Ylla, Guillem and Extavour, Cassandra G},
+doi = {10.1016/j.cois.2022.100881},
+file = {:home/guillem/Downloads/1-s2.0-S2214574522000165-main.pdf:pdf},
+issn = {22145745},
+journal = {Current Opinion in Insect Science},
+month = {apr},
+pages = {100881},
+publisher = {Elsevier},
+title = {{Genomics and genome editing techniques of crickets, an emerging model insect for biology and food science}},
+volume = {50},
+year = {2022}
+}
 @article{Tarikere2021,
 abstract = {The survival and evolution of a species is a function of the number of offspring it can produce. In insects the number of eggs that an ovary can produce is a major determinant of reproductive capacity. Insect ovaries are made up of tubular egg-producing subunits called ovarioles, whose number largely determines the number of eggs that can be potentially laid. Ovariole number is directly determined by the number of cellular structures called terminal filaments, which are stacks of cells that assemble in the larval ovary. Elucidating the developmental and regulatory mechanisms of terminal filament formation is thus key to understanding the regulation of insect reproduction through ovariole number regulation. We systematically measured mRNA expression of all cells in the larval ovary at the beginning, middle and end of terminal filament formation. We also separated somatic and germ line cells during these stages and assessed their tissue-specific gene expression during larval ovary development. We found that the number of differentially expressed somatic genes is highest during late stages of terminal filament formation and includes many signaling pathways that govern ovary development. We also show that germ line tissue, in contrast, shows greater differential expression during early stages of terminal filament formation, and highly expressed germ line genes at these stages largely control cell division and DNA repair. We provide a tissue-specific and temporal transcriptomic dataset of gene expression in the developing larval ovary as a resource to study insect reproduction.},
 author = {Tarikere, Shreeharsha and Ylla, Guillem and Extavour, Cassandra G},
