--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING Missing Expected Field 'journal' from entry Mito2022: \" {Cricket: The third domesticat ... \"\n",
+      "SUCESSFULLY PARSED Mito2022: \" {Cricket: The third domesticated insect}  \"\n",
       "SUCESSFULLY PARSED Nakamura2022: \" {Genomics and genome editing techniques of crickets, an emer ... \"\n",
       "SUCESSFULLY PARSED Tarikere2021: \" {Distinct gene expression dynamics in germ line and somatic  ... \"\n",
       "SUCESSFULLY PARSED Blondel2021: \" {Evolution of a cytoplasmic determinant: evidence for the bi ... \"\n",
@@ -217,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Mark Harrison,  Evelien Jongepier,  Hugh Robertson,  Nicolas Arning,  Tristan Bitard-Feildel,  Hsu Chao,  Christopher Childers,  Huyen Dinh,  Harshavardhan Doddapaneni,  Shannon Dugan,  Johannes Gowin,  Carolin Greiner,  Yi Han,  Haofu Hu,  Daniel Hughes,  Ann Huylmans,  Carsten Kemena,  Lukas Kremer,  Sandra Lee,  Alberto Lopez-Ezquerra,  Ludovic Mallet,  Jose Monroy-Kuhn,  Annabell Moser,  Shwetha Murali,  Donna Muzny,  Saria Otani,  Maria Piulachs,  Monica Poelchau,  Jiaxin Qu,  Florentine Schaub,  Ayako Wada-Katsumata,  Kim Worley,  Qiaolin Xie,  Guillem Ylla,  Michael Poulsen,  Richard Gibbs,  Coby Schal,  Stephen Richards,  Xavier Belles,  Judith Korb,  Erich Bornberg-Bauer, \"Hemimetabolous genomes reveal molecular basis of termite eusociality.\" Nature Ecology and Evolution, 2018.'"
+       "' Mark Harrison,  Evelien Jongepier,  Hugh Robertson,  Nicolas Arning,  Tristan Bitard-Feildel,  Hsu Chao,  Christopher Childers,  Huyen Dinh,  Harshavardhan Doddapaneni,  Shannon Dugan,  Johannes Gowin,  Carolin Greiner,  Yi Han,  Haofu Hu,  Daniel Hughes,  Ann Huylmans,  Carsten Kemena,  Lukas Kremer,  Sandra Lee,  Alberto Lopez-Ezquerra,  Ludovic Mallet,  Jose Monroy-Kuhn,  Annabell Moser,  Shwetha Murali,  Donna Muzny,  Saria Otani,  Maria Piulachs,  Monica Poelchau,  Jiaxin Qu,  Florentine Schaub,  Ayako Wada-Katsumata,  Kim Worley,  Qiaolin Xie,  <b>Guillem Ylla</b>,  Michael Poulsen,  Richard Gibbs,  Coby Schal,  Stephen Richards,  Xavier Belles,  Judith Korb,  Erich Bornberg-Bauer, \"Hemimetabolous genomes reveal molecular basis of termite eusociality.\" <em>Nature Ecology and Evolution</em>, 2018.'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
