--- a/_talks/2021-09-24-jubilee.md
+++ b/_talks/2021-09-24-jubilee.md
@@ -10,4 +10,8 @@ location: "Jagiellonian University, Krakow, Poland"
 
 [More information here](https://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen)
 
-[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)
+![](JW210926_356.jpg)
+
+![](JW210926_360.jpg)
+
+![](JW210926_363.jpg)
