--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Talks markdown generator for academicpages\n",
     "\n",
@@ -16,11 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -50,9 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -62,8 +55,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"title\"\t\"type\"\t\"url_slug\"\t\"venue\"\t\"date\"\t\"location\"\t\"talk_url\"\t\"description\"\n",
-      "\"The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\"\t\"Talk\"\t\"talk-4\"\t\"The Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\"\t\"2021-09-24\"\t\"Jagiellonian University, Krakow, Poland\"\t\"https://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\"\t\n"
+      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
+      "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\tTalk\tjubilee\tThe Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2021-09-24\tJagiellonian University, Krakow, Poland\thttps://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\t[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)\r\n",
+      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs.[Slide](WBBiB_Winter_School_2022_slide2.jpg)\r\n"
      ]
     }
    ],
@@ -84,11 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -130,35 +121,51 @@
        "      <th>0</th>\n",
        "      <td>The new FBBB’s Laboratory of Bioinformatics an...</td>\n",
        "      <td>Talk</td>\n",
-       "      <td>talk-4</td>\n",
+       "      <td>jubilee</td>\n",
        "      <td>The Jubilee Conference of the Faculty of Bioch...</td>\n",
        "      <td>2021-09-24</td>\n",
        "      <td>Jagiellonian University, Krakow, Poland</td>\n",
        "      <td>https://jubileuszwbbib.confer.uj.edu.pl/en_GB/...</td>\n",
        "      <td>[Photo1](JW210926_356.jpg)[Photo2](JW210926_36...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Small RNAs: when the small rule the bigger</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>winterschool22</td>\n",
+       "      <td>XLIX Winter School of the Faculty of Biochemis...</td>\n",
+       "      <td>2022-02-22</td>\n",
+       "      <td>Jagiellonian University, Krakow, Poland</td>\n",
+       "      <td>https://winterschool.wbbib.uj.edu.pl/en_GB/</td>\n",
+       "      <td>Guillem Ylla gave a talk in the workshop title...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title  type url_slug  \\\n",
-       "0  The new FBBB’s Laboratory of Bioinformatics an...  Talk   talk-4   \n",
+       "                                               title  type        url_slug  \\\n",
+       "0  The new FBBB’s Laboratory of Bioinformatics an...  Talk         jubilee   \n",
+       "1         Small RNAs: when the small rule the bigger  Talk  winterschool22   \n",
        "\n",
        "                                               venue        date  \\\n",
        "0  The Jubilee Conference of the Faculty of Bioch...  2021-09-24   \n",
+       "1  XLIX Winter School of the Faculty of Biochemis...  2022-02-22   \n",
        "\n",
        "                                  location  \\\n",
        "0  Jagiellonian University, Krakow, Poland   \n",
+       "1  Jagiellonian University, Krakow, Poland   \n",
        "\n",
        "                                            talk_url  \\\n",
        "0  https://jubileuszwbbib.confer.uj.edu.pl/en_GB/...   \n",
+       "1        https://winterschool.wbbib.uj.edu.pl/en_GB/   \n",
        "\n",
        "                                         description  \n",
-       "0  [Photo1](JW210926_356.jpg)[Photo2](JW210926_36...  "
+       "0  [Photo1](JW210926_356.jpg)[Photo2](JW210926_36...  \n",
+       "1  Guillem Ylla gave a talk in the workshop title...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,11 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -214,11 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -279,11 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -293,8 +291,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\n",
-      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\n"
+      "2021-09-24-jubilee.md\t\t JW210926_360.jpg\r\n",
+      "2022-02-22-talk_winterschool.md  JW210926_363.jpg\r\n",
+      "2022-02-22-winterschool22.md\t WBBiB_Winter_School_2022_slide2.jpg\r\n",
+      "JW210926_356.jpg\t\t YllaLab_Talks.tsv\r\n"
      ]
     }
    ],
@@ -304,11 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -318,19 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\n",
-      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\n",
-      "collection: talks\n",
-      "type: \"Tutorial\"\n",
-      "permalink: /talks/2013-03-01-tutorial-1\n",
-      "venue: \"UC-Berkeley Institute for Testing Science\"\n",
-      "date: 2013-03-01\n",
-      "location: \"Berkeley CA, USA\"\n",
-      "---\n",
-      "\n",
-      "[More information here](http://exampleurl.com)\n",
-      "\n",
-      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n"
+      "cat: ../_talks/2013-03-01-tutorial-1.md: No such file or directory\r\n"
      ]
     }
    ],
@@ -355,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
