--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -57,7 +57,7 @@
      "text": [
       "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
       "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\tTalk\tjubilee\tThe Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2021-09-24\tJagiellonian University, Krakow, Poland\thttps://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\t[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)\r\n",
-      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs.[Slide](WBBiB_Winter_School_2022_slide2.jpg)\r\n"
+      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs.[!](WBBiB_Winter_School_2022_slide2.jpg)\r\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -165,7 +165,7 @@
        "1  Guillem Ylla gave a talk in the workshop title...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -291,10 +291,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-09-24-jubilee.md\t\t JW210926_360.jpg\r\n",
-      "2022-02-22-talk_winterschool.md  JW210926_363.jpg\r\n",
-      "2022-02-22-winterschool22.md\t WBBiB_Winter_School_2022_slide2.jpg\r\n",
-      "JW210926_356.jpg\t\t YllaLab_Talks.tsv\r\n"
+      "2021-09-24-jubilee.md\t      JW210926_363.jpg\r\n",
+      "2022-02-22-winterschool22.md  WBBiB_Winter_School_2022_slide2.jpg\r\n",
+      "JW210926_356.jpg\t      YllaLab_Talks.tsv\r\n",
+      "JW210926_360.jpg\r\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
