--- a/_posts/2021-11-23-blog-post-2.md
+++ b/_posts/2021-11-23-blog-post-2.md
@@ -7,4 +7,4 @@ tags:
   - Openning
 ---
 
-The Newsletter of the Faculty of Bichemistry, Biophysics and Biotechnology announces the opening of out laboratory on Bioinformatics and Genome Biology. Link to the news (in Polish): https://wbbib.uj.edu.pl/pl_PL/wydzial/aktualnosci/-/journal_content/56_INSTANCE_oYhIKDBXnbw9/41648/149180726
+The Newsletter of the Faculty of Bichemistry, Biophysics and Biotechnology announces the opening of out laboratory on Bioinformatics and Genome Biology. [Link to the news in Polish](https://wbbib.uj.edu.pl/pl_PL/wydzial/aktualnosci/-/journal_content/56_INSTANCE_oYhIKDBXnbw9/41648/149180726)
