--- a/_talks/2021-09-24-jubilee.md
+++ b/_talks/2021-09-24-jubilee.md
@@ -3,15 +3,11 @@ title: "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: comput
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-24-jubilee
-venue: "The Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University"
+venue: "The Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University."
 date: 2021-09-24
 location: "Jagiellonian University, Krakow, Poland"
 ---
 
 [More information here](https://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen)
 
-![](JW210926_356.jpg)
-
-![](JW210926_360.jpg)
-
-![](JW210926_363.jpg)
+[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)
