--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -56,8 +56,11 @@
      "output_type": "stream",
      "text": [
       "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\tTalk\tjubilee\tThe Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2021-09-24\tJagiellonian University, Krakow, Poland\thttps://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\t[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)\r\n",
-      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs.[!](WBBiB_Winter_School_2022_slide2.jpg)\r\n"
+      "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\tTalk\tjubilee\tThe Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t2021-09-24\tJagiellonian University, Krakow, Poland\thttps://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\t[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)\r\n",
+      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs. ![](WBBiB_Winter_School_2022_slide2.jpg)\r\n",
+      "Could E93 play the adult specifier role in the embryo? \tTalk\tice2022\tInternational Congress of Entomology 2022.\t2022-07-20\tHelsinki, Finland\thttps://ice2020helsinki.fi/\t\r\n",
+      "Comparative genomics of insects to unveil the evolution of gene regulatory networks.\tTalk\tBibtorun2022\tBioinformatics in Torun conference by the Polish Bioinformatics Society  2022.\t24/06/2022\tTorun, Poland\thttps://www.ptbi.org.pl/website/conferences/bit22/\t\r\n",
+      "Cricket genomes: unveiling the genomes of future food.\tTalk\tPCG2022\t6th Polish Congress of Genetics\t30/06/2022\tKrakow, Pland\thttps://kongresgenetyki2022.jordan.pl/\t\r\n"
      ]
     }
    ],
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -139,6 +142,39 @@
        "      <td>https://winterschool.wbbib.uj.edu.pl/en_GB/</td>\n",
        "      <td>Guillem Ylla gave a talk in the workshop title...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Could E93 play the adult specifier role in the...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>ice2022</td>\n",
+       "      <td>International Congress of Entomology 2022.</td>\n",
+       "      <td>2022-07-20</td>\n",
+       "      <td>Helsinki, Finland</td>\n",
+       "      <td>https://ice2020helsinki.fi/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Comparative genomics of insects to unveil the ...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>Bibtorun2022</td>\n",
+       "      <td>Bioinformatics in Torun conference by the Poli...</td>\n",
+       "      <td>24/06/2022</td>\n",
+       "      <td>Torun, Poland</td>\n",
+       "      <td>https://www.ptbi.org.pl/website/conferences/bi...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cricket genomes: unveiling the genomes of futu...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>PCG2022</td>\n",
+       "      <td>6th Polish Congress of Genetics</td>\n",
+       "      <td>30/06/2022</td>\n",
+       "      <td>Krakow, Pland</td>\n",
+       "      <td>https://kongresgenetyki2022.jordan.pl/</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -147,25 +183,40 @@
        "                                               title  type        url_slug  \\\n",
        "0  The new FBBB’s Laboratory of Bioinformatics an...  Talk         jubilee   \n",
        "1         Small RNAs: when the small rule the bigger  Talk  winterschool22   \n",
+       "2  Could E93 play the adult specifier role in the...  Talk         ice2022   \n",
+       "3  Comparative genomics of insects to unveil the ...  Talk    Bibtorun2022   \n",
+       "4  Cricket genomes: unveiling the genomes of futu...  Talk         PCG2022   \n",
        "\n",
        "                                               venue        date  \\\n",
        "0  The Jubilee Conference of the Faculty of Bioch...  2021-09-24   \n",
        "1  XLIX Winter School of the Faculty of Biochemis...  2022-02-22   \n",
+       "2         International Congress of Entomology 2022.  2022-07-20   \n",
+       "3  Bioinformatics in Torun conference by the Poli...  24/06/2022   \n",
+       "4                    6th Polish Congress of Genetics  30/06/2022   \n",
        "\n",
        "                                  location  \\\n",
        "0  Jagiellonian University, Krakow, Poland   \n",
        "1  Jagiellonian University, Krakow, Poland   \n",
+       "2                        Helsinki, Finland   \n",
+       "3                            Torun, Poland   \n",
+       "4                            Krakow, Pland   \n",
        "\n",
        "                                            talk_url  \\\n",
        "0  https://jubileuszwbbib.confer.uj.edu.pl/en_GB/...   \n",
        "1        https://winterschool.wbbib.uj.edu.pl/en_GB/   \n",
+       "2                        https://ice2020helsinki.fi/   \n",
+       "3  https://www.ptbi.org.pl/website/conferences/bi...   \n",
+       "4             https://kongresgenetyki2022.jordan.pl/   \n",
        "\n",
        "                                         description  \n",
        "0  [Photo1](JW210926_356.jpg)[Photo2](JW210926_36...  \n",
-       "1  Guillem Ylla gave a talk in the workshop title...  "
+       "1  Guillem Ylla gave a talk in the workshop title...  \n",
+       "2                                                NaN  \n",
+       "3                                                NaN  \n",
+       "4                                                NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -218,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -280,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -291,10 +342,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-09-24-jubilee.md\t      JW210926_363.jpg\r\n",
-      "2022-02-22-winterschool22.md  WBBiB_Winter_School_2022_slide2.jpg\r\n",
-      "JW210926_356.jpg\t      YllaLab_Talks.tsv\r\n",
-      "JW210926_360.jpg\r\n"
+      "2021-09-24-jubilee.md\t      JW210926_356.jpg\r\n",
+      "2022-02-22-winterschool22.md  JW210926_360.jpg\r\n",
+      "2022-07-20-ice2022.md\t      JW210926_363.jpg\r\n",
+      "2022-Bibtorun2022.md\t      WBBiB_Winter_School_2022_slide2.jpg\r\n",
+      "2022-PCG2022.md\t\t      YllaLab_Talks.tsv\r\n"
      ]
     }
    ],
@@ -304,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
